src/parser.output
State 25 conflicts: 1 shift/reduce


Grammar

    0 $accept: file $end

    1 file: /* empty */
    2     | file poly_def
    3     | file optionline

    4 optionline: OPTION IDENTIFY
    5           | OPTION STRING
    6           | OPTION NUMBER

    7 poly_def: IDENTIFY '=' exp

    8 monowithsign: mono
    9             | '-' mono

   10 mono: IDENTIFY
   11     | IDENTIFY '^' NUMBER
   12     | mono '*' mono
   13     | NUMBER '*' mono
   14     | mono '*' NUMBER

   15 exp: monowithsign
   16    | exp '+' mono
   17    | exp '-' mono


Terminals, with rules where they appear

$end (0) 0
'*' (42) 12 13 14
'+' (43) 16
'-' (45) 9 17
'=' (61) 7
'^' (94) 11
error (256)
NUMBER (258) 6 11 13 14
IDENTIFY (259) 4 7 10 11
STRING (260) 5
OPTION (261) 4 5 6


Nonterminals, with rules where they appear

$accept (12)
    on left: 0
file (13)
    on left: 1 2 3, on right: 0 2 3
optionline (14)
    on left: 4 5 6, on right: 3
poly_def (15)
    on left: 7, on right: 2
monowithsign (16)
    on left: 8 9, on right: 15
mono (17)
    on left: 10 11 12 13 14, on right: 8 9 12 13 14 16 17
exp (18)
    on left: 15 16 17, on right: 7 16 17


State 0

    0 $accept: . file $end

    $default  reduce using rule 1 (file)

    file  go to state 1


State 1

    0 $accept: file . $end
    2 file: file . poly_def
    3     | file . optionline

    $end      shift, and go to state 2
    IDENTIFY  shift, and go to state 3
    OPTION    shift, and go to state 4

    optionline  go to state 5
    poly_def    go to state 6


State 2

    0 $accept: file $end .

    $default  accept


State 3

    7 poly_def: IDENTIFY . '=' exp

    '='  shift, and go to state 7


State 4

    4 optionline: OPTION . IDENTIFY
    5           | OPTION . STRING
    6           | OPTION . NUMBER

    NUMBER    shift, and go to state 8
    IDENTIFY  shift, and go to state 9
    STRING    shift, and go to state 10


State 5

    3 file: file optionline .

    $default  reduce using rule 3 (file)


State 6

    2 file: file poly_def .

    $default  reduce using rule 2 (file)


State 7

    7 poly_def: IDENTIFY '=' . exp

    NUMBER    shift, and go to state 11
    IDENTIFY  shift, and go to state 12
    '-'       shift, and go to state 13

    monowithsign  go to state 14
    mono          go to state 15
    exp           go to state 16


State 8

    6 optionline: OPTION NUMBER .

    $default  reduce using rule 6 (optionline)


State 9

    4 optionline: OPTION IDENTIFY .

    $default  reduce using rule 4 (optionline)


State 10

    5 optionline: OPTION STRING .

    $default  reduce using rule 5 (optionline)


State 11

   13 mono: NUMBER . '*' mono

    '*'  shift, and go to state 17


State 12

   10 mono: IDENTIFY .
   11     | IDENTIFY . '^' NUMBER

    '^'  shift, and go to state 18

    $default  reduce using rule 10 (mono)


State 13

    9 monowithsign: '-' . mono

    NUMBER    shift, and go to state 11
    IDENTIFY  shift, and go to state 12

    mono  go to state 19


State 14

   15 exp: monowithsign .

    $default  reduce using rule 15 (exp)


State 15

    8 monowithsign: mono .
   12 mono: mono . '*' mono
   14     | mono . '*' NUMBER

    '*'  shift, and go to state 20

    $default  reduce using rule 8 (monowithsign)


State 16

    7 poly_def: IDENTIFY '=' exp .
   16 exp: exp . '+' mono
   17    | exp . '-' mono

    '-'  shift, and go to state 21
    '+'  shift, and go to state 22

    $default  reduce using rule 7 (poly_def)


State 17

   13 mono: NUMBER '*' . mono

    NUMBER    shift, and go to state 11
    IDENTIFY  shift, and go to state 12

    mono  go to state 23


State 18

   11 mono: IDENTIFY '^' . NUMBER

    NUMBER  shift, and go to state 24


State 19

    9 monowithsign: '-' mono .
   12 mono: mono . '*' mono
   14     | mono . '*' NUMBER

    '*'  shift, and go to state 20

    $default  reduce using rule 9 (monowithsign)


State 20

   12 mono: mono '*' . mono
   14     | mono '*' . NUMBER

    NUMBER    shift, and go to state 25
    IDENTIFY  shift, and go to state 12

    mono  go to state 26


State 21

   17 exp: exp '-' . mono

    NUMBER    shift, and go to state 11
    IDENTIFY  shift, and go to state 12

    mono  go to state 27


State 22

   16 exp: exp '+' . mono

    NUMBER    shift, and go to state 11
    IDENTIFY  shift, and go to state 12

    mono  go to state 28


State 23

   12 mono: mono . '*' mono
   13     | NUMBER '*' mono .
   14     | mono . '*' NUMBER

    $default  reduce using rule 13 (mono)


State 24

   11 mono: IDENTIFY '^' NUMBER .

    $default  reduce using rule 11 (mono)


State 25

   13 mono: NUMBER . '*' mono
   14     | mono '*' NUMBER .

    '*'  shift, and go to state 17

    '*'       [reduce using rule 14 (mono)]
    $default  reduce using rule 14 (mono)


State 26

   12 mono: mono . '*' mono
   12     | mono '*' mono .
   14     | mono . '*' NUMBER

    $default  reduce using rule 12 (mono)


State 27

   12 mono: mono . '*' mono
   14     | mono . '*' NUMBER
   17 exp: exp '-' mono .

    '*'  shift, and go to state 20

    $default  reduce using rule 17 (exp)


State 28

   12 mono: mono . '*' mono
   14     | mono . '*' NUMBER
   16 exp: exp '+' mono .

    '*'  shift, and go to state 20

    $default  reduce using rule 16 (exp)
